--- a/backend/package.json
+++ b/backend/package.json
@@ -9,14 +9,18 @@
     "dev": "node --watch src/index.js",
     "test": "node --test test/*.test.js"
   },
-  "keywords": ["eip7702", "account-abstraction", "bundler"],
+  "keywords": [
+    "eip7702",
+    "account-abstraction",
+    "bundler"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "ethers": "^6.10.0",
+    "axios": "^1.13.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
-    "cors": "^2.8.5"
-  },
-  "devDependencies": {}
+    "ethers": "^6.10.0",
+    "express": "^4.18.2"
+  }
 }
